implement namespace logic
implement command logic for the namespace command