@@ -6,6 +6,8 @@ import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.slimelabs.sls.SLS;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -34,10 +36,24 @@ public class Join implements SimpleCommand {
         String[] args = invocation.arguments();
         Player player = (Player) invocation.source();
         switch (args.length) {
-            case 2:
+            case 2 -> {
                 return CompletableFuture.completedFuture(List.of(SLS.REGISTRY_MANAGER.getRegistryNames()));
-            case 3:
+            }
+            case 3 -> {
+                //if a "." is added return namespaces
+                if (args[2].contains(".")) {
+                    List<String> namespaces = new ArrayList<>();  // Use List<String> instead of ArrayList<String>
+
+                    // Loop through owned namespaces and concatenate to args[2], then add to the list
+                    args[2] = args[2].substring(0, args[2].indexOf(".") + 1);  // Keep only the part before the dot
+                    for (String name : SLS.NAMESPACE_REGISTRY.getOwnedNamespaces(player.getUniqueId())) {
+                        namespaces.add(args[2] + name);  // Concatenate args[2] with name
+                    }
+                    return CompletableFuture.completedFuture(namespaces);
+                }
+                return CompletableFuture.completedFuture(List.of(SLS.REGISTRY_MANAGER.getRegistry(args[1].trim()).getWorldNames()));
+            }
         }
-        return CompletableFuture.completedFuture(List.of("war"));
+        return CompletableFuture.completedFuture(Collections.emptyList());
     }
 }
